syntax = "proto3";

import "github.com/gogo/protobuf@v1.3.1/gogoproto/gogo.proto";
import "github.com/sensu/sensu-go/api/core/v2/meta.proto";
import "github.com/sensu/sensu-go/api/core/v2/entity.proto";

package sensu.core.v3;

option go_package = "v3";
option (gogoproto.populate_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.testgen_all) = true;

// EntityState represents entity state. Unlike configuration, state is
// typically only maintained for agent entities, although it can be maintained
// for proxy entities in certain circumstances.
message EntityState {
  // Metadata contains the name, namespace, labels and annotations of the
  // entity.
  sensu.core.v2.ObjectMeta metadata = 1 [ (gogoproto.jsontag) = "metadata", (gogoproto.nullable) = true ];

  // System contains information about the system that the Agent process
  // is running on, used for additional Entity context.
  sensu.core.v2.System system = 2 [ (gogoproto.nullable) = false ];

  // LastSeen is a unix timestamp that represents when the entity was last
  // observed by the keepalive system.
  int64 last_seen = 3 [ (gogoproto.jsontag) = "last_seen" ];

  // SensuAgentVersion is the sensu-agent version.
  string sensu_agent_version = 4 [ (gogoproto.jsontag) = "sensu_agent_version" ];
}
